--- a/chatstyle.css
+++ b/chatstyle.css
@@ -1,7 +1,8 @@
 
 form, p, span {
+
 	margin: 0;
-	padding: 0;
+	padding: 0px;
 }
   
 input {
@@ -9,34 +10,35 @@ input {
 }
   
 #chatbox {
-	margin:0 auto;
-	padding-bottom:25px;
-	padding-top: 25px;
-	background:#5CB075;
-	width:504px;
+	margin-top: 16px;
+	margin-left: 1508px;
+	padding-bottom:2px;
+	padding-top: 2px;
+	background:#000000;
+	width:378px;
 	border:1px solid #306941;
 }
   
 #textbox {
 	text-align:left;
 	margin:0 auto;
-	margin-bottom:25px;
+	margin-bottom:2px;
 	padding:10px;
 	background:#fff;
-	height:270px;
-	width:430px;
+	height:290px;
+	width:373px;
 	border:1px solid #306941;
 	overflow:auto;
 }
 
 #message {
 	margin: 0 auto;
-	width:450px;
+	width:337px;
 }
 
 #usermsg {
-	width:370px;
-	border:1px solid #ACD8F0;
+	width:315px;
+	border:2px solid #FFFFFF;
 }
 
 #submitmsg {
