--- a/default.css
+++ b/default.css
@@ -12,6 +12,15 @@ iframe {
 	width: 100%;
 }
 
+img {
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+	height: 100%;
+	max-width: 200px;
+	max-height: 200px;
+}
+
 .pre-scrollable {
 	height: 400px;
 }
